--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,4 +1,3 @@
-/* Общие стили */
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f9f9f9;
@@ -8,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #1e3a8a; /* Темно-синий */
+    background-color: #1e3a8a; 
     color: #fff;
     padding: 20px;
     text-align: center;
@@ -20,7 +19,7 @@ main {
     padding: 20px;
 }
 
-/* Контейнеры разделов */
+
 .dashboard {
     width: 90%;
     margin: 20px auto;
@@ -40,12 +39,12 @@ main {
 .section h2 {
     margin-bottom: 15px;
     font-size: 1.3rem;
-    color: #1e3a8a; /* Синий */
+    color: #1e3a8a; 
     border-bottom: 2px solid #1e3a8a;
     padding-bottom: 5px;
 }
 
-/* Кнопки */
+
 .buttons {
     display: flex;
     flex-wrap: wrap;
@@ -54,7 +53,7 @@ main {
 }
 
 .buttons button {
-    background-color: #1e3a8a; /* Синий */
+    background-color: #1e3a8a; 
     color: white;
     padding: 10px 20px;
     border: none;
@@ -65,7 +64,7 @@ main {
 }
 
 .buttons button:hover {
-    background-color: #163176; /* Более темный синий */
+    background-color: #163176; 
 }
 
 .buttons input {
@@ -76,10 +75,10 @@ main {
     font-size: 1rem;
 }
 
-/* Таблицы */
+
 #results, #bookingsResults, #customersResults, #paymentsResults {
     margin-top: 20px;
-    overflow-x: auto; /* Для горизонтального скролла */
+    overflow-x: auto; 
 }
 
 table {
@@ -98,7 +97,7 @@ table th, table td {
 }
 
 table th {
-    background-color: #1e3a8a; /* Синий */
+    background-color: #1e3a8a; 
     color: #fff;
 }
 
@@ -110,7 +109,6 @@ table tr:hover {
     background-color: #f1f1f1;
 }
 
-/* Формы */
 .form-container {
     display: none;
     padding: 20px;
@@ -132,7 +130,7 @@ form input, form textarea {
 
 form button[type="submit"],
 form button[type="button"] {
-    background-color: #1e3a8a; /* Синий */
+    background-color: #1e3a8a; 
     color: white;
     padding: 10px 15px;
     border: none;
@@ -146,7 +144,6 @@ form button[type="button"]:hover {
     background-color: #163176;
 }
 
-/* Адаптивность */
 @media (max-width: 768px) {
     .dashboard {
         padding: 10px;
@@ -193,4 +190,5 @@ footer {
 .btn-ctr {
     display: flex;
     justify-content: center;
+    margin-top: 20px;
 }
